# lido-succinct-derisk

./: .gitignore
contracts/: remappings.txt
contracts/src/: ValidatorsMerkleVerifier.sol
contracts/src/fixtures/: fixture.json
contracts/test/: ValidatorsMerkleVerifier.t.sol
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  build.rs
shared/: Cargo.toml
shared/src/: hashing.rs  lib.rs
shared/src/hashing/: merkleization.rs  sha256.rs  types.rs  utils.rs
shared/src/ssz/: validator.rs
utils/: Cargo.toml
