[workspace]
[package]
version = "0.1.0"
name = "lido-derisk-script"
edition = "2021"

[[bin]]
name = "validators_ssz_merkle"
path = "src/bin/validators_ssz_merkle.rs"

[[bin]]
name = "temp"
path = "src/bin/temp.rs"


[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag="v1.0.5-testnet", features = [ "plonk" ] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
hex-literal = "0.4.1"
hex = "0.4"
sha2 = "=0.10.8"
itertools = "0.13"
log = "0.4.21"
ethereum_ssz = "0.5.4"
ethereum_serde_utils = "0.5.2"
ethereum_ssz_derive = "0.5.4"
ethereum-types = "0.14.1"

lido_derisk_lib = { path = "../shared" }


[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag="v1.0.5-testnet"  }


