[workspace]
[package]
version = "0.1.0"
name = "lido_derisk_lib"
edition = "2021"

[lib]
name = "lido_derisk_lib"
path = "src/lib.rs"

[dependencies]
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = "0.1.40"
hex-literal = "0.4.1"
hex = "0.4"
sha2 = "=0.10.8"
itertools = "0.13"
log = "0.4.21"
ethereum_ssz = "0.5.4"
ethereum_serde_utils = "0.5.2"
ethereum_ssz_derive = "0.5.4"
ethereum-types = "0.14.1"


[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }

